1999-06-21  Roland McGrath  <roland@baalperazim.frob.com>

	* login.c (main): For no-uids shell, default SH_ARG0 to informative
	value.  Use asprintf to construct it.

1999-06-20  Roland McGrath  <roland@baalperazim.frob.com>

	* ps.c (options): Doc fix.

1999-05-29  Roland McGrath  <roland@baalperazim.frob.com>

	* w.c (fetch_boot_time): New function.  Use libps to get
	task_basic_info for PID 1 (init); its creation_time is "boot time".
	(uptime): Use it, instead of stat'ing /var/run/uptime.

	* ps.c (output_fmts): Add %start and %time specs before %command
	in "user" (ps -u) format.

1999-05-16  Roland McGrath  <roland@baalperazim.frob.com>

	* portinfo.c (parse_task): Fail with appropriate error message if the
	fetched task is MACH_PORT_NULL.

1999-04-25  Roland McGrath  <roland@baalperazim.frob.com>

	* shd.c (run): Print child's PID when pausing before exec.

Fri Mar 12 15:22:02 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* login.c (add_utmp_entry): Properly call setutent and endutent
	around the getutline call.

1999-03-11  Roland McGrath  <roland@baalperazim.frob.com>

	* portinfo.c (main): Grok -E and inhibit error msg for
	print_xlated_port_info if set.
	(options): #if 0 -q option until we implement it.

1999-02-17  Roland McGrath  <roland@baalperazim.frob.com>

	* mount.sh: Use `awk' instead of `gawk'.

Fri Feb 19 02:43:11 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* login.c (main): Correctly implement -f instead of always
	acting as if it were set.

	* login.c (main): When transitioning from no UID's to having UID's
	create a new session like normal.  Reported by Mark M. Kettenis
	<kettenis@wins.uva.nl>.

1999-02-06  Mark Kettenis  <kettenis@gnu.org>

	* login.c (main): If no effective uid, really use first auxiliary
	uid to use as password entry to get parameters from.

1999-01-03  Roland McGrath  <roland@baalperazim.frob.com>

	* syncfs.c: Replace -a/--asynchronous with -s/--synchronous.
	Default is now asynchronous.
